@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri Apr  5 13:29:58 2002 -->
+<!-- Wed May  1 14:56:28 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -161,11 +161,15 @@ TARGET="Resource Window">TMDA plugin</a> for the
 <a href="http://www.squirrelmail.org/" TARGET="Resource Window">SquirrelMail</a>
 webmail package.<br><br>
 
-<li><a href="http://www.mired.org/consulting.html" TARGET="Resource Window">Mike Meyer</a>
- commercially supports TMDA, qmail, and many other software packages.  Remote
- admin work, as well as e-mail and phone support is available.  He
- accepts purchase orders.</li>
+<li>Andrew Wilson has written the Perl module 
+<a href="http://search.cpan.org/search?dist=Mail-Address-Tagged" TARGET="Resource Window">
+Mail::Address::Tagged</a> which generates and validates tagged email addresses.
 <br><br>
+
+<li><a href="http://www.mired.org/consulting.html" TARGET="Resource Window">Mike Meyer</a> 
+commercially supports TMDA, qmail, and many other software packages.
+Remote admin work, as well as e-mail and phone support is available.
+He accepts purchase orders.  <br><br>
 
 <li>The TMDA mailing lists are available as newsgroups courtesy of
 the <a href="http://gmane.org/" TARGET="Resource Window">Gmane</a>
